# ValKeyRe

./: .gitignore  Cargo.toml  README.md  build.bat
.cargo/: config.toml
src/: lib.rs  main.rs  store.rs
src/database/: mod.rs  table.rs
src/fs_extra/: mod.rs
src/store/: mod.rs  room.rs
