[package]
name = "valkeyre"
version = "0.1.0"
authors = ["drakulah"]
edition = "2021"
description = "A key-value store, prioritizing ease of use."
license = "MIT"
readme = "README.md"
repository = "https://github.com/drakulah/ValKeyRe"
keywords = ["valkeyre", "key-value", "store"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"